--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "element-ui": "^2.15.13",
+    "typescript": "^4.9.5",
+    "vue": "^2.7.14",
+    "vue-amap": "^0.5.10",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
