--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@amap/amap-jsapi-loader": "^1.0.1",
+    "@amap/amap-vue": "^2.0.13",
     "axios": "^1.3.4",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.13",
-    "typescript": "^4.9.5",
     "vue": "^2.7.14",
     "vue-amap": "^0.5.10",
     "vuex": "^3.6.2"
@@ -23,7 +24,9 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0"
   },
   "eslintConfig": {
     "root": true,
@@ -31,7 +34,7 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/vue3-essential",
+      "plugin:vue/essential",
       "eslint:recommended"
     ],
     "parserOptions": {
